--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="text">#FFFFFFFF</color>
     <color name="cardviewtvtime">#00BFFF</color>
     <color name="cardviewtvaud">#FF0000</color>
+    <color name="gray">#858585</color>
 </resources>
