--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="text">#FF000000</color>
     <color name="cardviewtvtime">#0000FF</color>
     <color name="cardviewtvaud">#FF0000</color>
+    <color name="gray">#858585</color>
 
 </resources>
