--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="cardviewtvtime">#0000FF</color>
     <color name="cardviewtvaud">#FF0000</color>
     <color name="gray">#858585</color>
+    <color name="button">#0000FF</color>
 
 </resources>
