--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -494,10 +494,23 @@
                         </androidx.cardview.widget.CardView>
 
 
-
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
+
+                <Button
+                    android:id="@+id/Logout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/logout"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/noto_sans_bold"
+                    android:textColor="@color/text"
+                    android:background="@color/background"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="15dp"/>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -509,10 +522,8 @@
                     app:cardCornerRadius="15dp"
                     app:cardElevation="5dp">
                 </androidx.cardview.widget.CardView>
-
             </LinearLayout>
         </ScrollView>
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
